# VehiclePrimitives

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh
python_bindings/: README.md  bindings.cc  environment.yml  example_speed_matching.py  pyproject.toml  setup.py
src/: CubicSpiral.cc  SpeedMatching.cc  utility.cc
src/include/: CubicSpiral.hh  MotionPrimitive.hh  SpeedMatching.hh  utility.hh
src_tests/: CMakeLists.txt  test_vprim_CubicSpiral.cc  test_vprim_SpeedMatching.cc  test_vprim_poly.cc  test_vprim_poly_root.cc  vprim_test_0.cc
